k8s/manifests/navidrome/service-navidrome.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome

spec:
  type: ExternalName
  externalName: "172.20.0.162"
