k8s/manifests/navidrome/ingress-filebrowser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-pomerium
  annotations:
    # RBAC: /navidrome/admin (filebrowser requires admin)
    ingress.pomerium.io/policy: |
      - allow:
          or:
            - groups:
                has: "/navidrome/admin"
    ingress.pomerium.io/pass_identity_headers: "true"
    ingress.pomerium.io/set_response_headers: |
      Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
      X-Frame-Options: SAMEORIGIN
      X-Content-Type-Options: nosniff
      X-XSS-Protection: 1; mode=block
      Referrer-Policy: same-origin
spec:
  ingressClassName: pomerium
  rules:
  - host: navidrome-filebrowser.harvestasya.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome
            port:
              number: 8080
