k8s/manifests/navidrome/ingress-pomerium-filebrowser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-pomerium
  annotations:
    # BeyondCorp: tier-4 + media
    ingress.pomerium.io/policy: |
      - allow:
          and:
            - groups:
                has: "access.group.media"
            - or:
                - groups:
                    has: "access.tier.tier-4"
                - groups:
                    has: "access.tier.tier-3"
                - groups:
                    has: "access.tier.tier-2"
                - groups:
                    has: "access.tier.tier-1"
    ingress.pomerium.io/pass_identity_headers: "true"
    ingress.pomerium.io/set_response_headers: |
      Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
      X-Frame-Options: SAMEORIGIN
      X-Content-Type-Options: nosniff
      X-XSS-Protection: 1; mode=block
      Referrer-Policy: same-origin
spec:
  ingressClassName: pomerium
  rules:
  - host: navidrome-filebrowser.harvestasya.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome
            port:
              number: 8080
