k8s/manifests/navidrome/ingressroute-pomerium.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-pomerium-route
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`navidrome.harvestasya.org`) || Host(`navidrome-filebrowser.harvestasya.org`)
    services:
    - name: pomerium-proxy
      namespace: pomerium
      port: 443
      scheme: https
      serversTransport: pomerium-transport
